fixed the dark mode issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,15 +11,9 @@
   --font-sans: var(--font-dm-sans);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
 body {
-  /* background: var(--background); */
-  /* color: var(--foreground); */
+  background: var(--background);
+  color: var(--foreground);
   font-family: "DM Sans";
 }
